Fixed navbar hiding on mobile devices and made few minor design change

--- a/src/components/text-card/text-card.scss
+++ b/src/components/text-card/text-card.scss
@@ -37,7 +37,7 @@
         font-family: 'Poppins', sans-serif;
         font-size: 1.1vw;
         line-height: 2.6vw;
-        font-weight: 600;
+        font-weight: 400;
         letter-spacing: 0.01em;
         color: #BFBFBF;
         padding-left: 5vw;
